--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,20 +3,28 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-# This name is CRITICAL. It must be "cadence-flow".
 name = "cadence-flow"
 version = "0.0.1.dev0"
 authors = [
-  { name="The Cadence Flow Authors", email="contact@cadence-flow.com" }, # Use a placeholder email
+  { name="The Cadence Flow Authors", email="contact@cadence-flow.com" },
 ]
 description = "Placeholder for the Cadence Flow project. An open-source Python library for human-in-the-loop AI workflows."
 readme = "README.md"
 requires-python = ">=3.9"
-license = { file="LICENSE" }
+license = { text = "MIT License" }
+
+# --- THIS IS THE NEW SECTION TO ADD ---
+dependencies = [
+    "fastapi",
+    "uvicorn[standard]",
+    "python-socketio",
+    "pydantic"
+]
+# -----------------------------------------
+
 classifiers = [
     "Development Status :: 1 - Planning",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
     "Operating System :: OS Independent",
     "Topic :: Software Development :: Libraries :: Python Modules",
@@ -25,5 +33,10 @@ classifiers = [
 
 [project.urls]
 Homepage = "https://github.com/cadence-flow"
-"Bug Tracker" = "https://github.com/cadence-flow/cadence-flow/issues" # Assumes repo name
+"Bug Tracker" = "https://github.com/cadence-flow/cadence-flow/issues"
 Source = "https://github.com/cadence-flow"
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["cadence_flow*"]
+exclude = ["frontend", "examples", "dist", "build"]
